--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-mocks": "~1.4.1"
   },
   "dependencies": {
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "lodash": "~3.9.3"
   }
 }
