--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/jack-in-the-box/angular-split-html",
   "authors": [
     "Aurélien Masfrand <amasfrand@jack.fr>",
-    "Jack in the box (http://jack-in-the-box.fr)",
+    "Jack in the box (http://jack-in-the-box.fr)"
   ],
   "description": "Split html content in some piece of correct html, inspired by https://github.com/punkave/split-html",
   "main": "dist/angular-split-html.js",
